# SPDX-FileCopyrightText: 2022 Marigold <contact@marigold.dev>
# SPDX-FileCopyrightText: 2022 Nomadic Labs <contact@nomadic-labs.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "debug-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tezos-smart-rollup = "0.2.1"
