# SPDX-FileCopyrightText: 2023 Marigold <contact@marigold.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "upgrade-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tezos-smart-rollup = "0.2.1"
tezos_data_encoding = { version = "0.5.0" }
tezos_data_encoding_derive = { version = "0.5.0" }
nom = "7.1.3"
tezos_crypto_rs = { version = "0.5.0", default-features = false }
hex = "0.4.3"
hex-literal = "0.4.1"
