# SPDX-FileCopyrightText: 2023 Marigold <contact@marigold.dev>
# SPDX-FileCopyrightText: 2023 Nomadic Labs <contact@nomadic-labs.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "tzwitter-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tezos-smart-rollup = {version = "0.2.1", features = ["testing"]}
tezos_data_encoding = "0.5.0"
hex = "0.4.3"

# To hash everything
ed25519-compact = { version ="2.0", default-features = false }
tezos_crypto_rs = { version = "0.5", default-features = false }

serde = "1.0.152"
serde-json-wasm = "0.5.0"
num-bigint = "0.3"
