[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Let's use the last version of the SDK, todo: fix the version if it's an issue

tezos-smart-rollup = "0.2.0"

rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
bincode = "1.3.1"
serde = {version = "1.0.163", features = ["derive"]}